syntax = "proto3";

package protos;
option go_package = "orch-go/gen/protos;protos";
option csharp_namespace = "Core";



import "custom_types.proto";
import "google/protobuf/empty.proto";

service AccountTypeService {
  rpc GetAll (GetAllRequest) returns (GetAllAccountTypesResponse);
  rpc GetById (GetAccountTypeByIdRequest) returns (AccountTypeModel);
  rpc GetByIds (GetAccountTypeByIdsRequest) returns (GetAllAccountTypesResponse);
  rpc Add (AddAccountTypeRequest) returns (AccountTypeModel);
  rpc Update (UpdateAccountTypeRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteAccountTypeRequest) returns (google.protobuf.Empty);
  rpc AddBulk (AddAccountTypeBulkRequest) returns (google.protobuf.Empty);
  rpc UpdateBulk (UpdateAccountTypeBulkRequest) returns (google.protobuf.Empty);
  rpc DeleteBulk (DeleteAccountTypeBulkRequest) returns (google.protobuf.Empty);
  rpc GetCount (google.protobuf.Empty) returns (CountResponse);
}

message AccountTypeModel {
  int32 type_id = 1;
  string name = 2;
  optional string description = 3;
}

message GetAllAccountTypesResponse {
  repeated AccountTypeModel account_types = 1;
}

message GetAccountTypeByIdRequest {
  int32 type_id = 1;
}

message GetAccountTypeByIdsRequest {
  repeated int32 type_ids = 1;
}

message AddAccountTypeRequest {
  string name = 1;
  optional string description = 2;
}

message UpdateAccountTypeRequest {
  int32 type_id = 1;
  string name = 2;
  optional string description = 3;
}

message DeleteAccountTypeRequest {
  int32 type_id = 1;
}

message AddAccountTypeBulkRequest {
  repeated AddAccountTypeRequest account_types = 1;
}

message UpdateAccountTypeBulkRequest {
  repeated UpdateAccountTypeRequest account_types = 1;
}

message DeleteAccountTypeBulkRequest {
  repeated DeleteAccountTypeRequest account_types = 1;
}
